objects/Onsite_Hardware_Request_Bundle__c.object
<CustomObject>
    <fields>
        <fullName>Cvent_Asset_Bundle__c</fullName>
        <formula>Cvent_Asset_Subgroup_Bundle__r.Cvent_Asset_Bundle__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cvent Asset Bundle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cvent_Asset_Group__c</fullName>
        <formula>Cvent_Asset_Subgroup_Bundle__r.Cvent_Asset_Subgroup__r.Cvent_Asset_Group__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cvent Asset Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cvent_Asset_Subgroup_Bundle__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Cvent Asset Subgroup &amp; Bundle</label>
        <referenceTo>Cvent_Asset_Subgroup_Bundle__c</referenceTo>
        <relationshipLabel>Onsite Hardware Request Bundles</relationshipLabel>
        <relationshipName>Onsite_Hardware_Request_Bundles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cvent_Asset_Subgroup__c</fullName>
        <formula>Cvent_Asset_Subgroup_Bundle__r.Cvent_Asset_Subgroup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cvent Asset Subgroup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onsite_Hardware_Request__c</fullName>
        <label>Onsite Hardware Request</label>
        <referenceTo>Onsite_Hardware_Request__c</referenceTo>
        <relationshipLabel>Onsite Hardware Request Bundles</relationshipLabel>
        <relationshipName>Onsite_Hardware_Request_Bundles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Requested_Quantity__c</fullName>
        <label>Requested Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Onsite Hardware Request Bundle</label>
    <nameField>
        <displayFormat>OHRB-{0}</displayFormat>
        <label>Onsite Hardware Request Bundle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onsite Hardware Request Bundles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>